Much faster listing by using QHash

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,3 +9,4 @@ V0.1.0
  * Remember the window size and the last archiving filter.
  * Handle spaces in file names.
  * Item context menu.
+ * Much faster listing with QHash.
