--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+V0.2.0
+---------
+ * Added Preferences dialog.
+ * Customizable view icon size.
+ * Polish translation by Marcin Mikołajczak (m4sk1n at GitHub).
+
 V0.1.0
 ---------
  * Arqiver is forked from lumina-archiver with lots of fixes, improvements and additions. It supports libarchive (bsdtar), gzip and 7z. With 7z, it also supports encryption (apssword protection).
