View/expand/collapse current item with Enter/Return
Also focus the view and its first item after updating it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ V0.2.0
  * Customizable view icon size.
  * Polish translation by Marcin Mikołajczak (m4sk1n at GitHub).
  * Workaround for a KDE bug that, under some circumstances, doesn't let the application exit when its main window is closed.
+ * Focus the view and its first item after updating it.
+ * View/expand/collapse the current item with Enter/Return.
 
 V0.1.0
 ---------
