--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ V0.2.0
  * Workaround for a KDE bug that, under some circumstances, doesn't let the application exit when its main window is closed.
  * Focus the view and its first item after updating it.
  * View/expand/collapse the current item with Enter/Return.
+ * With tar/bsdtar and if the parent dir exists, change the parent dir name instead of extracting in a child dir.
 
 V0.1.0
 ---------
