--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ V0.2.0
  * View/expand/collapse the current item with Enter/Return.
  * With tar/bsdtar and if the parent dir exists, change the parent dir name instead of extracting in a child dir.
  * A root archive file may mean a parent directory or a single file. Previously, it was supposed to be a parent directory and that caused single files not to be extracted with non-Gzip archives when they were present in the extraction directory.
+ * If a file comes after its containing folder in the command line, bsdtar doesn't extract the folder. A workaround is added for this behavior.
 
 V0.1.0
 ---------
