--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@ V0.2.0
  * With tar/bsdtar and if the parent dir exists, change the parent dir name instead of extracting in a child dir.
  * A root archive file may mean a parent directory or a single file. Previously, it was supposed to be a parent directory and that caused single files not to be extracted with non-Gzip archives when they were present in the extraction directory.
  * If a file comes after its containing folder in the command line, bsdtar doesn't extract the folder. A workaround is added for this behavior.
+ * Prevent tree collapse after extracting an rpm archive.
+ * Don't update the tree unnecessarily.
+ * Fixed a bug in removal of encrypted files inside 7z archives.
 
 V0.1.0
 ---------
