Make cursor busy while doing jobs

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ V0.3.0
  * Prevented drop into self.
  * Overwrite a Gzip archive if the overwrite prompt is accepted.
  * Always wait for the process to be started before waiting for it to be finished.
+ * Show the busy cursor while doing jobs.
 
 V0.2.0
 ---------
