--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+V0.3.1
+---------
+ * Fixed archiving of files from different folders.
+ * Fixed a mistake in choosing the archive name on compressing a folder.
+
 V0.3.0
 ---------
  * Eliminated a rare cause of crash, when the file list contains "/" and "//" (with "application/x-archive", for example).
