--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+V0.4.0
+---------
+ * Added support for Zstd (because tar supports it).
+
 V0.3.2
 ---------
  * Added a workaround for the low performance of QMimeDatabase. Loading of heavy archives is much faster now.
