--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 V0.4.0
 ---------
  * Added support for Zstd (because tar supports it).
+ * Allow stopping (killing) long processes.
 
 V0.3.2
 ---------
