--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ V0.4.0
  * Fixed a potential issue in translations.
  * Enable the "Remove File(s)" action only if an item is selected.
  * Show (optional) prompt before removing items.
+ * Show the updated view only after populating and adjusting it.
 
 V0.3.2
 ---------
