--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 V0.4.1
 ---------
  * Added read-only support for MS Windows packages.
+ * Accept 7z lists without Date and Time (may happen with MS Windows packages).
 
 V0.4.0
 ---------
