--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ V0.4.1
  * Added read-only support for MS Windows packages through 7z.
  * Accept 7z lists without Date and Time (may happen with MS Windows packages).
  * Added read-only support for Android packages through bsdtar.
+ * Reset the GUI if the archive's password isn't entered (correctly).
 
 V0.4.0
 ---------
