More natural sorting of items
Also, handled newline in item names as far as possible.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+V0.7.0
+--------
+ * More intuitive sorting of items by excluding identical file extensions.
+ * Handle newline in item names as far as possible.
+
 V0.6.1
 --------
  * Added read-only support for RAR archives through 7z.
