--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ V0.7.0
  * Handle newlines and text tabs in item names as far as possible.
  * Natural sorting of items by treating dot as a separator.
  * Set the window title to the archive name.
- * Added context menu to the label that shows archive path.
+ * Added context menu to the archive path bar for copying path and opening containing folder.
 
 V0.6.1
 --------
