Fixed emblemized icons with device pixel ratio

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ V0.7.0
  * Added context menu to the archive path bar for copying path and opening containing folder.
  * Use 7z for uncompressed disk images and bsdtar for compressed ones.
  * Added fallback icons for files and folders.
+ * Fixed emblemized icons with device pixel ratio.
 
 V0.6.1
 --------
