--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ V0.8.0
 --------
  * Added a workaround for a problem in QCollator.
  * Added an option for expanding top level directories when loading archives.
+ * Resize columns appropriately on expanding a directory item.
+ * Don't stretch the first column by default.
 
 V0.7.0
 --------
