--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ V0.8.0
  * Don't drag items while the middle mouse button is pressed.
  * Added "application/x-xz" to and removed "application/x-bzip" from the supported extractions.
  * Added a workaround for Qt's problem with scrolling to deep nonexpanded tree items.
+ * Always expand the first header column to fill the available width.
 
 V0.7.0
 --------
