--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 V0.9.0
 --------
  * Show childless directories whose names contain the filtering string.
- * Fixed viewing/single-extracting of files with regex characters in their names with bsdtar (by escaping the string that comes after "--include" because it's a file path in the archive).
+ * Fixed viewing of files that have wildcard characters in their names with bsdtar (by escaping some wildcard characters that come after "--include").
 
 V0.8.0
 --------
