--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ V0.9.0
  * Show childless directories whose names contain the filtering string.
  * Fixed viewing of files that have wildcard characters in their names with bsdtar (by escaping some wildcard characters that come after "--include").
  * Better smooth scrolling from inside the view (especially with touchpad).
+ * Added read-only support for AppImage bundle through 7z.
 
 V0.8.0
 --------
