--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ V0.9.0
  * Fixed viewing of files that have wildcard characters in their names with bsdtar (by escaping some wildcard characters that come after "--include").
  * Better smooth scrolling from inside the view (especially with touchpad).
  * Added read-only support for AppImage bundle through 7z.
+ * When viewing a file in a password protected archive, ask the password again if a nonempty, wrong password is entered.
 
 V0.8.0
 --------
