--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ V0.9.0
  * Better smooth scrolling from inside the view (especially with touchpad).
  * Added read-only support for AppImage bundle through 7z.
  * When viewing a file in a password protected archive, ask the password again if a nonempty, wrong password is entered.
+ * When viewing files, warn the user of links without targets instead of trying to open them.
 
 V0.8.0
 --------
