--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+V0.10.0
+--------
+ * Considered the modes of emblemized icons. This is especially relevant to Qt icon engines that colorize selected symbolic icons.
+
 V0.9.0
 --------
  * Show childless directories whose names contain the filtering string.
