--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ V0.10.0
  * Get the mimetypes of symlinks directly, without consulting their targets (because their targets may be symlinks themselves and so, they aren't reliable).
  * First try the file manager DBus interface when opening the containing folder.
  * Removed the action for opening the containing folder when running as root (because there are DBus complications with most file managers).
+ * Added read-only support for VirtualBox Extension Pack.
 
 V0.9.0
 --------
