--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+V0.10.1
+--------
+ * Added "View current item" to the "Vew" menu.
+
 V0.10.0
 --------
  * Considered the modes of emblemized icons. This is especially relevant to Qt icon engines that colorize selected symbolic icons.
