--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 V0.10.1
 --------
  * Added "View current item" to the "Vew" menu.
+ * Simplified finding of Qt modules with cmake.
 
 V0.10.0
 --------
