Updated translators list

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 V0.11.0
 --------
- * Added "View current item" to the "Vew" menu.
+ * Added "View current item" to the "View" menu.
  * Simplified finding of Qt modules with cmake.
  * Corrected context menus on Wayland, by specifying their parent widget.
  * Removed the option about fitting the first column (because it could make the first column almost invisible).
