--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 V0.12.0
 --------
- * Added the ability to modify files inside archives (archives handled by 7z are excluded for now).
- * Made sure that "No" is the default button of question dialogs (Qt may have a minor problem in this regard).
+ * Made it possible to modify files inside archives.
+ * Made sure that "No" is the default button of question dialogs (Qt seems to have a minor problem in this regard).
  * Don't start extraction if the archive is removed.
+ * Made viewing/extracting of single files much faster with `bsdtar`.
 
 V0.11.0
 --------
