--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 V0.12.0
 --------
  * Made it possible to modify files inside archives.
+ * Added an option for using system icons.
  * Made sure that "No" is the default button of question dialogs (Qt seems to have a minor problem in this regard).
  * Don't start extraction if the archive is removed.
  * Made viewing/extracting of single files much faster with bsdtar.
