--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ V1.0.0
 --------
  * Removed Qt5 support.
  * Added unadvertised support for 'application/vnd.snap'.
- * Dropped using of "gio" for opening URLs.
+ * Check the existence of "gio" before using it for opening URLs.
 
 V0.12.0
 --------
