--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 V1.0.0
 --------
- * Removed Qt5 support.
+ * Removed Qt5 support and bumped the minimum required version of Qt to 6.6.
  * Added unadvertised support for 'application/vnd.snap'.
  * Check the existence of "gio" before using it for opening URLs.
 
