--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+V1.0.2
+--------
+ * Removed an old workaround about translations, which prevented some languages from being loaded due to a recent change in Qt.
+
 V1.0.1
 --------
  * Replaced the deprecated method QMouseEvent::pos().
