--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ V1.0.2
  * Removed an old workaround about translations, which prevented some languages from being loaded due to a recent change in Qt.
  * Check for nullity of `QDrag` before calling `deleteLater()` on it.
  * Added LZ4 support.
+ * Used the original file name with Gzip ("-N" option).
 
 V1.0.1
 --------
